--- a/tools/frogs/tool-data/frogs_picrust2_functions.loc.sample
+++ b/tools/frogs/tool-data/frogs_picrust2_functions.loc.sample
@@ -20,9 +20,9 @@
 #
 #PICRUSt2 files are present in the arborescence of PICRUSt2. 
 #
-#<marker_gene>	<db>	<picrust2_input_marker>	<picrust2_input_function>
-#
-# For 16S data (see the 6 first lines), PICRUSt2 only takes the dname of the database as input (for exemple EC).
+#<value_as_marker_gene>	<name_as_fun_db>	<fun_db_or_path_to_marker_copy_numbers>	<fun_db_or_path_to_fun_copy_numbers>	<version>
+
+# For 16S data (see the 6 first lines), PICRUSt2 only takes the db name of the database as input (for exemple EC).
 # With ITS and 18S data, you have to specify the path of marker gene counts files.
 #
 #
