--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -131,7 +131,7 @@ jobs:
       id: lint
       with:
         mode: lint
-        fail-level: warn
+        fail-level: error
         repository-list: ${{ needs.setup.outputs.repository-list }}
         tool-list: ${{ needs.setup.outputs.tool-list }}
         additional-planemo-options: ${{ env.EXTRA_SKIP }}
